--- a/projects/autoloantools.html
+++ b/projects/autoloantools.html
@@ -69,27 +69,33 @@
                                 </div>
                             </div>
                             <div class="row mb-5">
-                                <h2 class="modal-subhead">My Role</h2>
                                 <div class="col-12 col-md-4">
-                                    <ul>
-                                        <li>Research</li>
-                                        <li>Wireframing</li>
-                                        <li>UX/UI Design</li>
-                                        <li>Prototyping</li>
-                                        <li>Content Strategy</li>
-                                    </ul>
+                                    <h2 class="modal-subhead">Skills</h2>
+                                    <div class="col-12">
+                                        <ul>
+                                            <li>Research</li>
+                                            <li>Wireframing</li>
+                                            <li>UX/UI Design</li>
+                                            <li>Prototyping</li>
+                                            <li>Content Strategy</li>
+                                        </ul>
+                                    </div>
                                 </div>
                                 <div class="col-12 col-md-8">
-                                    My role included working closely with the research team to conduct a series of
-                                    empathy
-                                    interviews,
-                                    building a foundational understanding of customer perceptions of simple interest
-                                    loans and
-                                    identifying gaps that could be addressed within the digital experience. I was then
-                                    tasked
-                                    with concepting, designing, and testing solutions before supporting our
-                                    engineeringing
-                                    team’s build and shipment of the experience.
+                                    <h2 class="modal-subhead">My Role</h2>
+                                    <div class="col-12">
+                                        My role included working closely with the research team to conduct a series of
+                                        empathy
+                                        interviews,
+                                        building a foundational understanding of customer perceptions of simple interest
+                                        loans and
+                                        identifying gaps that could be addressed within the digital experience. I was
+                                        then
+                                        tasked
+                                        with concepting, designing, and testing solutions before supporting our
+                                        engineeringing
+                                        team’s build and shipment of the experience.
+                                    </div>
                                 </div>
                             </div>
                             <div class="row mb-5">
@@ -161,25 +167,31 @@
                                     representatives or worse, repossession, collections, and negative credit reporting?
                                 </div>
                             </div>
-                            <div class="row mb-5">
-                                <h2 class="modal-subhead">My Role</h2>
-                                <div class="col-12 col-md-4">
-                                    <ul>
-                                        <li>Research</li>
-                                        <li>Wireframing</li>
-                                        <li>UX/UI Design</li>
-                                        <li>Prototyping</li>
-                                        <li>Content Strategy</li>
-                                    </ul>
+                            <div class="row">
+                                <div class="col-12 col-md-4 mb-5">
+                                    <h2 class="modal-subhead">Skills</h2>
+                                    <div class="col-12">
+                                        <ul>
+                                            <li>Research</li>
+                                            <li>Wireframing</li>
+                                            <li>UX/UI Design</li>
+                                            <li>Prototyping</li>
+                                            <li>Content Strategy</li>
+                                        </ul>
+                                    </div>
                                 </div>
-                                <div class="col-12 col-md-8">
-                                    My role was to lead the design work, working closely with our product, analyst,
-                                    content, and
-                                    research teams to understand what parameters worked best for customers and kept them
-                                    in
-                                    their cars while mitigating overall risk to the business and navigating the
-                                    regulatory
-                                    environment around consumer auto lending.
+                                <div class="col-12 col-md-8 mb-5">
+                                    <h2 class="modal-subhead">My Role</h2>
+                                    <div class="col-12">
+                                        My role was to lead the design work, working closely with our product, analyst,
+                                        content, and
+                                        research teams to understand what parameters worked best for customers and kept
+                                        them
+                                        in
+                                        their cars while mitigating overall risk to the business and navigating the
+                                        regulatory
+                                        environment around consumer auto lending.
+                                    </div>
                                 </div>
                             </div>
                             <div class="row mb-5">
