--- a/projects/connectingflight.html
+++ b/projects/connectingflight.html
@@ -56,27 +56,33 @@
                                     options all while over 30,000 feet in the air?
                                 </div>
                             </div>
-                            <div class="row mb-5">
-                                <h2 class="modal-subhead">My Role</h2>
-                                <div class="col-12 col-md-4">
-                                    <ul>
-                                        <li>Research</li>
-                                        <li>Wireframing</li>
-                                        <li>UX/UI Design</li>
-                                        <li>Prototyping</li>
-                                        <li>Art Direction</li>
-                                    </ul>
+                            <div class="row">
+                                <div class="col-12 col-md-4 mb-5">
+                                    <h2 class="modal-subhead">Skills</h2>
+                                    <div class="col-12">
+                                        <ul>
+                                            <li>Research</li>
+                                            <li>Wireframing</li>
+                                            <li>UX/UI Design</li>
+                                            <li>Prototyping</li>
+                                            <li>Art Direction</li>
+                                        </ul>
+                                    </div>
                                 </div>
-                                <div class="col-12 col-md-8">
-                                    My role was to work closely with our video and product teams to research, concept,
-                                    and
-                                    design an experience communicating the product vision to key stakeholders while
-                                    leading up
-                                    to larger business and strategic investment. I was responsible for designing the
-                                    core facets
-                                    of the service including signup and purchasing experiences, flight time
-                                    entertainment
-                                    optimization interactions, and an integrated flight tracker.
+                                <div class="col-12 col-md-8 mb-5">
+                                    <h2 class="modal-subhead">My Role</h2>
+                                    <div class="col-12">
+                                        My role was to work closely with our video and product teams to research,
+                                        concept,
+                                        and
+                                        design an experience communicating the product vision to key stakeholders while
+                                        leading up
+                                        to larger business and strategic investment. I was responsible for designing the
+                                        core facets
+                                        of the service including signup and purchasing experiences, flight time
+                                        entertainment
+                                        optimization interactions, and an integrated flight tracker.
+                                    </div>
                                 </div>
                             </div>
                             <div class="row mb-5">
