--- a/projects/laysstaxwebsite.html
+++ b/projects/laysstaxwebsite.html
@@ -53,22 +53,29 @@
                                     with a path to purchase through available retailers.
                                 </div>
                             </div>
-                            <div class="row mb-5">
-                                <h2 class="modal-subhead">My Role</h2>
-                                <div class="col-12 col-md-4">
-                                    <ul>
-                                        <li>Concepting</li>
-                                        <li>Content Strategy</li>
-                                        <li>Art Direction</li>
-                                        <li>UX/UI Design</li>
-                                    </ul>
+                            <div class="row">
+                                <div class="col-12 col-md-4 mb-5">
+                                    <h2 class="modal-subhead">Skills</h2>
+                                    <div class="col-12">
+                                        <ul>
+                                            <li>Concepting</li>
+                                            <li>Content Strategy</li>
+                                            <li>Art Direction</li>
+                                            <li>UX/UI Design</li>
+                                        </ul>
+                                    </div>
                                 </div>
-                                <div class="col-12 col-md-8">
-                                    My role was to design the end-to-end customer experience, concept lifestyle collages
-                                    associated with each product, and create the final production image assets to be
-                                    handed off
-                                    to development partners. I was also involved in the content creation throughout the
-                                    site.
+                                <div class="col-12 col-md-8 mb-5">
+                                    <h2 class="modal-subhead">My Role</h2>
+                                    <div class="col-12">
+                                        My role was to design the end-to-end customer experience, concept lifestyle
+                                        collages
+                                        associated with each product, and create the final production image assets to be
+                                        handed off
+                                        to development partners. I was also involved in the content creation throughout
+                                        the
+                                        site.
+                                    </div>
                                 </div>
                             </div>
                         </div>
