--- a/projects/shoppingmobileapp.html
+++ b/projects/shoppingmobileapp.html
@@ -63,28 +63,34 @@
                                     engagement, and increasing downstream effects to potential revenue.
                                 </div>
                             </div>
-                            <div class="row mb-5">
-                                <h2 class="modal-subhead">My Role</h2>
-                                <div class="col-12 col-md-4">
-                                    <ul>
-                                        <li>Design Management</li>
-                                        <li>Research</li>
-                                        <li>Wireframing</li>
-                                        <li>UX/UI Design</li>
-                                        <li>Prototyping</li>
-                                        <li>Design System Development</li>
-                                    </ul>
+                            <div class="row">
+                                <div class="col-12 col-md-4 mb-5">
+                                    <h2 class="modal-subhead">Skills</h2>
+                                    <div class="col-12">
+                                        <ul>
+                                            <li>Design Management</li>
+                                            <li>Research</li>
+                                            <li>Wireframing</li>
+                                            <li>UX/UI Design</li>
+                                            <li>Prototyping</li>
+                                            <li>Design System Development</li>
+                                        </ul>
+                                    </div>
                                 </div>
-                                <div class="col-12 col-md-8">
-                                    I worked closely with our product and research team to identify the
-                                    largest opportunities for improving the overall customer experience and increase
-                                    mobile purchases through our app. I led my design team into creating a series
-                                    of
-                                    viable solutions for improved core user flows and net new functionality that could
-                                    be
-                                    implemented on a shortened delivery timeline with our mobile engineering team
-                                    leading
-                                    up to a national launch of our shopping platform.
+                                <div class="col-12 col-md-8 mb-5">
+                                    <h2 class="col-12 modal-subhead">My Role</h2>
+                                    <div class="col-12">
+                                        I worked closely with our product and research team to identify the
+                                        largest opportunities for improving the overall customer experience and increase
+                                        mobile purchases through our app. I led my design team into creating a series
+                                        of
+                                        viable solutions for improved core user flows and net new functionality that
+                                        could
+                                        be
+                                        implemented on a shortened delivery timeline with our mobile engineering team
+                                        leading
+                                        up to a national launch of our shopping platform.
+                                    </div>
                                 </div>
                             </div>
                             <div class="row mb-5">
