--- a/projects/skylanders3Dadventure.html
+++ b/projects/skylanders3Dadventure.html
@@ -76,24 +76,29 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="row mb-5">
-                                <h2 class="modal-subhead">My Role</h2>
-                                <div class="col-12 col-md-4">
-                                    <ul>
-                                        <li>Research</li>
-                                        <li>Art Direction</li>
-                                        <li>UX/UI Design</li>
-                                        <li>Content Strategy</li>
-                                    </ul>
+                            <div class="row">
+                                <div class="col-12 col-md-4 mb-5">
+                                    <h2 class="modal-subhead">Skills</h2>
+                                    <div class="col-12">
+                                        <ul>
+                                            <li>Research</li>
+                                            <li>Art Direction</li>
+                                            <li>UX/UI Design</li>
+                                            <li>Content Strategy</li>
+                                        </ul>
+                                    </div>
                                 </div>
-                                <div class="col-12 col-md-8">
-                                    I worked collaboratively with another Art Director to develop an end-to-end
-                                    interactive
-                                    in-store experience. My role included initial research and concept development,
-                                    designing
-                                    in-store interactive displays and a companion mobile app (iOS and Android), and
-                                    creating
-                                    associated marketing materials for retail partners.
+                                <div class="col-12 col-md-8 mb-5">
+                                    <h2 class="modal-subhead">My Role</h2>
+                                    <div class="col-12">
+                                        I worked collaboratively with another Art Director to develop an end-to-end
+                                        interactive
+                                        in-store experience. My role included initial research and concept development,
+                                        designing
+                                        in-store interactive displays and a companion mobile app (iOS and Android), and
+                                        creating
+                                        associated marketing materials for retail partners.
+                                    </div>
                                 </div>
                             </div>
                             <div class="row mb-5">
