--- a/projects/generatormakerspace.html
+++ b/projects/generatormakerspace.html
@@ -58,19 +58,24 @@
                                     top score and ultimate bragging rights.
                                 </div>
                             </div>
-                            <div class="row mb-5">
-                                <h2 class="modal-subhead">My Role</h2>
-                                <div class="col-12 col-md-4">
-                                    <ul>
-                                        <li>UX/UI Design</li>
-                                        <li>Content Strategy</li>
-                                        <li>Game Design</li>
-                                    </ul>
+                            <div class="row">
+                                <div class="col-12 col-md-4 mb-5">
+                                    <h2 class="modal-subhead">Skills</h2>
+                                    <div class="col-12">
+                                        <ul>
+                                            <li>UX/UI Design</li>
+                                            <li>Content Strategy</li>
+                                            <li>Game Design</li>
+                                        </ul>
+                                    </div>
                                 </div>
-                                <div class="col-12 col-md-8">
-                                    I designed branding for the space and an end-to-end companion app experience
-                                    including the
-                                    core user experience, UI/UX design, and interactive game.
+                                <div class="col-12 col-md-8 mb-5">
+                                    <h2 class="modal-subhead">My Role</h2>
+                                    <div class="col-12">
+                                        I designed branding for the space and an end-to-end companion app experience
+                                        including the
+                                        core user experience, UI/UX design, and interactive game.
+                                    </div>
                                 </div>
                             </div>
                         </div>
