--- a/projects/monsterproject.html
+++ b/projects/monsterproject.html
@@ -51,6 +51,35 @@
                                     Inspire kids.
                                 </div>
                             </div>
+                            <div class="row">
+                                <div class="col-12 col-md-4 mb-5">
+                                    <h2 class="modal-subhead">Skills</h2>
+                                    <div class="col-12">
+                                        <ul>
+                                            <li>Project Management</li>
+                                            <li>Creative Direction</li>
+                                            <li>Visual Design</li>
+                                            <li>Concepting</li>
+                                            <li>Cat (Designer) Herding</li>
+                                            <li>Presenting to 1st Graders</li>
+                                            <li>High Fives</li>
+                                            <li>Pizza Partying</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="col-12 col-md-8 mb-5">
+                                    <h2 class="modal-subhead">My Role</h2>
+                                    <div class="col-12">
+                                        My role was to design the end-to-end customer experience, concept lifestyle
+                                        collages
+                                        associated with each product, and create the final production image assets to be
+                                        handed off
+                                        to development partners. I was also involved in the content creation throughout
+                                        the
+                                        site.
+                                    </div>
+                                </div>
+                            </div>
                             <div class="row mb-3">
                                 <h2 class="modal-subhead">Solution</h2>
                                 <p class="col-12">
