--- a/projects/monsterproject.html
+++ b/projects/monsterproject.html
@@ -60,7 +60,7 @@
                                             <li>Creative Direction</li>
                                             <li>Visual Design</li>
                                             <li>Concepting</li>
-                                            <li>Cat (Designer) Herding</li>
+                                            <li>Cat / Designer Herding</li>
                                             <li>Presenting to 1st Graders</li>
                                             <li>High Fives</li>
                                             <li>Pizza Partying</li>
@@ -70,13 +70,11 @@
                                 <div class="col-12 col-md-8 mb-5">
                                     <h2 class="modal-subhead">My Role</h2>
                                     <div class="col-12">
-                                        My role was to design the end-to-end customer experience, concept lifestyle
-                                        collages
-                                        associated with each product, and create the final production image assets to be
-                                        handed off
-                                        to development partners. I was also involved in the content creation throughout
-                                        the
-                                        site.
+                                        My role was to work closely with a team of first grade teachers to coordinate
+                                        and bring to life a creative artwork exchange involving over 150 students and
+                                        over 100 professional creatives. This included things like communications,
+                                        artwork digitizing, file managment, print production, creative presentation, and
+                                        documenting the entire experience to name a few.
                                     </div>
                                 </div>
                             </div>
