--- a/projects/generatormakerspace.html
+++ b/projects/generatormakerspace.html
@@ -156,10 +156,10 @@
                     </p>
                     <div class="row no-gutters mb-3 d-flex justify-content-center generator-image-container4">
                         <div class="col-12 col-md-6 no-gutters d-flex flex-column h-100">
-                            <img src="/images/project-images/generator-flyer1.png">
+                            <img class="col-12" src="/images/project-images/generator-flyer1.png">
                         </div>
                         <div class="col-12 col-md-6 no-gutters d-flex flex-column h-100">
-                            <img src="/images/project-images/generator-flyer2.png">
+                            <img class="col-12" src="/images/project-images/generator-flyer2.png">
                         </div>
                     </div>
                 </div>
