--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
             <img class="profile-img" src="./images/ja-profile-photo.png"
                 alt="Portrait image of Jonny Abowd's devilishly handsome face.">
         </div>
-        <h2 class="font-display title fade-in">Digital designer, problem solver, and high five enthusiast
+        <h2 class="font-display title fade-in">Digital designer, problem solver, <span class="d-block">and
+                high five
+                enthusiast</span>
         </h2>
         <!-- <div class="hr"></div> -->
         <div class="body fade-in">
