--- a/projects/shoppingmobileapp.html
+++ b/projects/shoppingmobileapp.html
@@ -49,18 +49,17 @@
                             <div class="row mt-5 mb-5">
                                 <h2 class="modal-subhead">Problem</h2>
                                 <div class="col-12">
-                                    Capital One acquired Wikibuy in fall 2018 and I was brought on shortly after to lead
+                                    Capital One acquired Wikibuy in fall 2018 and I was brought on to lead
                                     their design
                                     team
-                                    while
-                                    working to integrate and improve the company’s product offering. The
+                                    focusing on integrate and improve the company’s product offering. The
                                     existing Wikibuy mobile application had issues with usability, stability,
                                     new
-                                    user attrition, and a lack of overall revenue generation for our business. My
+                                    user attrition, and a lack of overall revenue generation for the business. My
                                     design
-                                    team and I were tasked with shoring up the customer experience, improving
+                                    team and I were tasked with shoring up the customer experience, increasing
                                     overall
-                                    engagement, and increasing downstream effects to potential revenue.
+                                    engagement, and improving downstream effects to potential revenue.
                                 </div>
                             </div>
                             <div class="row">
@@ -69,27 +68,26 @@
                                     <div class="col-12">
                                         <ul>
                                             <li>Design Management</li>
-                                            <li>Research</li>
                                             <li>Wireframing</li>
                                             <li>UX/UI Design</li>
                                             <li>Prototyping</li>
-                                            <li>Design System Development</li>
+                                            <li>Design Systems</li>
+                                            <li>Research Synthesis</li>
                                         </ul>
                                     </div>
                                 </div>
                                 <div class="col-12 col-md-8 mb-5">
                                     <h2 class="col-12 modal-subhead">My Role</h2>
                                     <div class="col-12">
-                                        I worked closely with our product and research team to identify the
+                                        Work with our product and research team to identify the
                                         largest opportunities for improving the overall customer experience and increase
-                                        mobile purchases through our app. I led my design team into creating a series
-                                        of
-                                        viable solutions for improved core user flows and net new functionality that
+                                        mobile purchases through the app. Create a series
+                                        improved core user flows and new features that
                                         could
                                         be
-                                        implemented on a shortened delivery timeline with our mobile engineering team
+                                        implemented on a shortened delivery timeline with the mobile engineering team
                                         leading
-                                        up to a national launch of our shopping platform.
+                                        up to a national launch of Capital One's Shopping platform.
                                     </div>
                                 </div>
                             </div>
@@ -97,12 +95,13 @@
                                 <h2 class="modal-subhead">Solution</h2>
                                 <div class="col-12">
                                     <p>
-                                        After conducting a series of interviews with our customers, analyzing app
+                                        After conducting a series of interviews with customers, analyzing app
                                         usage,
                                         and examining performance data we identified the largest pain points and
                                         opportunities
                                         to
-                                        improve the overall experience. We then redesigned a set of core flows within
+                                        improve the overall experience. After prioritizing the improvements and agreeing
+                                        on a roadmap with the product team, we designed a set of flows within
                                         the
                                         app
                                         including a
@@ -112,22 +111,21 @@
                                         with
                                         push notification enrollment, and a redesigned price comparison experience.
                                     </p>
-                                    <p>
-                                        We also designed
-                                        and built a new in-app shopping flow that allowed us to integrate our flagship
-                                        Automatic
-                                        Coupon service. This gave the app full feature parity with our core desktop
-                                        browser
-                                        extension product and gave customers on average 30% more savings when shopping
-                                        through
-                                        the app.
-                                    </p>
                                 </div>
                             </div>
                             <div class="row mb-5">
-                                <h2 class="modal-subhead">Results</h2>
+                                <h2 class="modal-subhead">Impact</h2>
                                 <div class="col-12">
                                     <ul>
+                                        <li class="mb-2"> Designed
+                                            and built a new in-app shopping flow that allowed us to integrate an
+                                            automatic
+                                            coupon service from our desktop extension and give customers, on average,
+                                            30% more
+                                            savings when shopping
+                                            through
+                                            the app.
+                                        </li>
                                         <li class="mb-2">Our new homepage design led to a 25% increase in purchases
                                             year-over-year over the previous design.
                                         </li>
@@ -156,13 +154,13 @@
                     <div class="row py-5 mb-5 d-flex justify-content-center shoppingmobileapp-image-container">
                         <h2 class="mb-3 col-12 text-center project-title">Homepage Redesign</h2>
                         <div class="col-6 col-lg-4 d-flex flex-column">
-                            <h2 class="col-12 text-center mt-0 mb-0">
+                            <h2 class="col-12 text-center mt-0 mb-0 project-title">
                                 Before
                             </h2>
                             <img class="col-12" src="/images/project-images/shopping-before.png">
                         </div>
                         <div class="col-6 col-lg-4 d-flex flex-column">
-                            <h2 class="col-12 text-center mt-0 mb-0">
+                            <h2 class="col-12 text-center mt-0 mb-0 project-title">
                                 After
                             </h2>
                             <img class="col-12" src="/images/project-images/shopping-after.png">
@@ -252,10 +250,10 @@
                             while
                             they shop and automatically applying coupon codes during checkout.
                         </p>
-                        <img class="col-6 col-md-3 h-100" src="/images/project-images/shopping-checkout1.png">
-                        <img class="col-6 col-md-3 h-100" src="/images/project-images/shopping-checkout2.png">
-                        <img class="col-6 col-md-3 h-100" src="/images/project-images/shopping-checkout3.png">
-                        <img class="col-6 col-md-3 h-100" src="/images/project-images/shopping-checkout4.png">
+                        <!-- <img class="col-6 col-md-3 h-100" src="/images/project-images/shopping-checkout1.png">
+                        <img class="col-6 col-md-3 h-100" src="/images/project-images/shopping-checkout2.png"> -->
+                        <img class="col-6 col-md-4 h-100" src="/images/project-images/shopping-checkout3.png">
+                        <img class="col-6 col-md-4 h-100" src="/images/project-images/shopping-checkout4.png">
                     </div>
                 </div>
             </div>
