--- a/projects/shoppingmobileapp.html
+++ b/projects/shoppingmobileapp.html
@@ -79,13 +79,13 @@
                                 <div class="col-12 col-md-8 mb-5">
                                     <h2 class="col-12 modal-subhead">My Role</h2>
                                     <div class="col-12">
-                                        Work with our product and research team to identify the
+                                        Work with our product and research teams to identify the
                                         largest opportunities for improving the overall customer experience and increase
                                         mobile purchases through the app. Create a series
-                                        improved core user flows and new features that
+                                        improved core user flows as well as new features that
                                         could
                                         be
-                                        implemented on a shortened delivery timeline with the mobile engineering team
+                                        implemented on a short, roughly 6 month, delivery timeline
                                         leading
                                         up to a national launch of Capital One's Shopping platform.
                                     </div>
@@ -101,7 +101,7 @@
                                         opportunities
                                         to
                                         improve the overall experience. After prioritizing the improvements and agreeing
-                                        on a roadmap with the product team, we designed a set of flows within
+                                        to a roadmap with the product team, we designed a set of flows within
                                         the
                                         app
                                         including a
@@ -183,7 +183,7 @@
                                         After a series of contextual interviews, we discovered broken or missing core
                                         features such as reliable product and store search and base-level account
                                         management
-                                        which caused customers to lose confidence in this shopping app.
+                                        which caused customers to lose confidence in the app.
                                     </li>
                                 </ul>
                             </div>
@@ -222,7 +222,8 @@
                         <p class="col-10 text-center mt-0 mb-3">
                             I developed brand migration guidelines to be used by multiple development,
                             marketing,
-                            and agency teams during the rebrand of the Wikibuy platform to Capital One Shopping.
+                            and external agency teams during the rebrand of the Wikibuy platform to Capital One
+                            Shopping.
                         </p>
                         <img class="col-12 col-lg-10 h-100" src="/images/project-images/shopping-brand.png">
                     </div>
