--- a/projects/autoloantools.html
+++ b/projects/autoloantools.html
@@ -235,7 +235,7 @@
                                 </div>
                             </div>
                             <div class="row mb-5">
-                                <h2 class="modal-subhead">Results</h2>
+                                <h2 class="modal-subhead">Impact</h2>
                                 <div class="col-12">
                                     <ul>
                                         <li class="mb-3">
