--- a/projects/skylanders3Dadventure.html
+++ b/projects/skylanders3Dadventure.html
@@ -114,7 +114,7 @@
                                 </div>
                             </div>
                             <div class="row mb-5">
-                                <h2 class="modal-subhead">Resuts</h2>
+                                <h2 class="modal-subhead">Impact</h2>
                                 <div class="col-12">
                                     <ul>
                                         <li class="mb-3">
