--- a/projects/shoppingmobileapp.html
+++ b/projects/shoppingmobileapp.html
@@ -95,21 +95,23 @@
                                 <h2 class="modal-subhead">Solution</h2>
                                 <div class="col-12">
                                     <p>
-                                        After conducting a series of interviews with customers, analyzing app
-                                        usage,
-                                        and examining performance data we identified the largest pain points and
+                                        After working with our research team to conduct over 15 interviews focused on
+                                        understanding customer sentiment, we then analyzed over a year’s worth of app
+                                        usage, customer reviews,
+                                        and performance data. This information allowed us to identify the largest pain
+                                        points and
                                         opportunities
                                         to
-                                        improve the overall experience. After prioritizing the improvements and agreeing
-                                        to a roadmap with the product team, we designed a set of flows within
+                                        improve the overall experience. After prioritizing and agreeing
+                                        on a roadmap, we designed and redesigned a set of flows within
                                         the
                                         app
                                         including a
-                                        completely new personalized home page, improved search experience, new
+                                        completely new personalized home page, improved search experience, and a new
                                         onboarding
                                         flow
                                         with
-                                        push notification enrollment, and a redesigned price comparison experience.
+                                        push notification enrollment.
                                     </p>
                                 </div>
                             </div>
@@ -117,10 +119,11 @@
                                 <h2 class="modal-subhead">Impact</h2>
                                 <div class="col-12">
                                     <ul>
-                                        <li class="mb-2"> Designed
-                                            and built a new in-app shopping flow that allowed us to integrate an
+                                        <li class="mb-2"> My team designed a new in-app shopping flow
+                                            integrating the
                                             automatic
-                                            coupon service from our desktop extension and give customers, on average,
+                                            coupon service from our desktop extension to give mobile customers, on
+                                            average,
                                             30% more
                                             savings when shopping
                                             through
@@ -137,7 +140,7 @@
                                         <li class="mb-2">The app store rating increased from 3.3 stars before the
                                             redesign to
                                             4.7 stars after
-                                            core experience enhancements were completed.</li>
+                                            core experience enhancements were launched.</li>
                                         <li class="mb-2">We successfully rebranded from Wikibuy to the new <a
                                                 href="https://www.capitalone.com/learn-grow/money-management/capital-one-shopping/"
                                                 target="_blank" rel="noopener noreferrer">Capital One
@@ -220,7 +223,8 @@
                     <div class="row py-5 mb-5 d-flex justify-content-center shoppingmobileapp-image-container">
                         <h2 class="mb-3 col-12 text-center project-title">Rebrand Guidelines</h2>
                         <p class="col-10 text-center mt-0 mb-3">
-                            I developed brand migration guidelines to be used by multiple development,
+                            My team and I developed brand migration guidelines and a comprehensive design system to be
+                            used by multiple development,
                             marketing,
                             and external agency teams during the rebrand of the Wikibuy platform to Capital One
                             Shopping.
